--- a/MainWindow/mainwindow.ui
+++ b/MainWindow/mainwindow.ui
@@ -57,7 +57,7 @@
     <item row="0" column="0" colspan="2">
      <widget class="QLabel" name="label_2">
       <property name="text">
-       <string>Formulas</string>
+       <string>Formulae</string>
       </property>
      </widget>
     </item>
