--- a/MainWindow/mainwindow.ui
+++ b/MainWindow/mainwindow.ui
@@ -75,21 +75,21 @@
      </widget>
     </item>
     <item row="5" column="1">
-     <widget class="QPushButton" name="pushButton_5">
+     <widget class="QPushButton" name="button_copy_plain">
       <property name="text">
        <string>Copy</string>
       </property>
      </widget>
     </item>
     <item row="6" column="1">
-     <widget class="QPushButton" name="pushButton_4">
+     <widget class="QPushButton" name="button_copy_latex">
       <property name="text">
        <string>Copy</string>
       </property>
      </widget>
     </item>
     <item row="7" column="1">
-     <widget class="QPushButton" name="pushButton_6">
+     <widget class="QPushButton" name="button_copy_lisp">
       <property name="text">
        <string>Copy</string>
       </property>
