--- a/MainWindow/mainwindow.ui
+++ b/MainWindow/mainwindow.ui
@@ -51,6 +51,19 @@
         </property>
        </widget>
       </item>
+      <item row="4" column="0">
+       <spacer name="verticalSpacer">
+        <property name="orientation">
+         <enum>Qt::Vertical</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>20</width>
+          <height>40</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
      </layout>
     </item>
     <item row="3" column="0" colspan="2">
@@ -96,7 +109,11 @@
      </widget>
     </item>
     <item row="1" column="0">
-     <widget class="QListView" name="listView"/>
+     <widget class="QListView" name="listView">
+      <property name="alternatingRowColors">
+       <bool>true</bool>
+      </property>
+     </widget>
     </item>
     <item row="5" column="0">
      <widget class="QLineEdit" name="line_plain">
