--- a/MainWindow/mainwindow.ui
+++ b/MainWindow/mainwindow.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>logic-builder</string>
+   <string>logic-builder - alpha 0.1</string>
   </property>
   <property name="windowIcon">
    <iconset resource="../resources.qrc">
@@ -52,6 +52,9 @@
        <layout class="QGridLayout" name="gridLayout_3">
         <item row="5" column="1">
          <widget class="QToolButton" name="toolButton_2">
+          <property name="enabled">
+           <bool>false</bool>
+          </property>
           <property name="text">
            <string>...</string>
           </property>
@@ -63,6 +66,9 @@
         </item>
         <item row="0" column="1">
          <widget class="QToolButton" name="toolButton">
+          <property name="enabled">
+           <bool>false</bool>
+          </property>
           <property name="text">
            <string/>
           </property>
@@ -74,6 +80,9 @@
         </item>
         <item row="1" column="1">
          <widget class="QToolButton" name="toolButton_3">
+          <property name="enabled">
+           <bool>false</bool>
+          </property>
           <property name="text">
            <string/>
           </property>
@@ -85,6 +94,9 @@
         </item>
         <item row="4" column="1">
          <widget class="QToolButton" name="toolButton_5">
+          <property name="enabled">
+           <bool>false</bool>
+          </property>
           <property name="text">
            <string/>
           </property>
@@ -109,6 +121,9 @@
         </item>
         <item row="2" column="1">
          <widget class="QToolButton" name="toolButton_4">
+          <property name="enabled">
+           <bool>false</bool>
+          </property>
           <property name="text">
            <string/>
           </property>
@@ -281,6 +296,9 @@
    <addaction name="menuHelp"/>
   </widget>
   <action name="actionSave">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
    <property name="icon">
     <iconset resource="../resources.qrc">
      <normaloff>:/resources/open.svg</normaloff>:/resources/open.svg</iconset>
@@ -299,6 +317,9 @@
    </property>
   </action>
   <action name="actionLoad">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
    <property name="icon">
     <iconset resource="../resources.qrc">
      <normaloff>:/resources/save.svg</normaloff>:/resources/save.svg</iconset>
@@ -308,16 +329,25 @@
    </property>
   </action>
   <action name="actionSave_As">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
    <property name="text">
     <string>Save As</string>
    </property>
   </action>
   <action name="actionAbout">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
    <property name="text">
     <string>About</string>
    </property>
   </action>
   <action name="actionTutorial">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
    <property name="icon">
     <iconset resource="../resources.qrc">
      <normaloff>:/resources/help.svg</normaloff>:/resources/help.svg</iconset>
@@ -327,6 +357,9 @@
    </property>
   </action>
   <action name="actionUndo">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
    <property name="icon">
     <iconset resource="../resources.qrc">
      <normaloff>:/resources/undo.svg</normaloff>:/resources/undo.svg</iconset>
@@ -336,6 +369,9 @@
    </property>
   </action>
   <action name="actionRedo">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
    <property name="icon">
     <iconset resource="../resources.qrc">
      <normaloff>:/resources/redo.svg</normaloff>:/resources/redo.svg</iconset>
@@ -354,6 +390,9 @@
    </property>
   </action>
   <action name="actionNew">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
    <property name="icon">
     <iconset resource="../resources.qrc">
      <normaloff>:/resources/new.svg</normaloff>:/resources/new.svg</iconset>
